Fixed db.js.DataStore.find_records() Created db.js.DataStore.get_all_rows() Added Table View to / Created New Contact Page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,5 +2,7 @@ doctype html
 html(lang="ENGLISH")
     head
         title #{title}
+        link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/water.css@2/out/light.css")
+        a(href='/login') Sign In
         body
         block content
