Added individual contact views

--- a/views/create.pug
+++ b/views/create.pug
@@ -42,5 +42,8 @@ block content
             section
                 input(type='checkbox', name='contact_by_email')
                 label(for='contact_by_email') Contact by email
+            section
+                input(type='checkbox', name='contact_by_mail')
+                label(for='contact_by_mail') Contact by mail
         button(type='submit') Add
         a(href='/') Cancel
