Added Sign Up Functionality
Bug:
user data not being passed to home.pug template in response after sign up

--- a/views/signup.pug
+++ b/views/signup.pug
@@ -1,4 +1,27 @@
 extends layout.pug
 
 block content
-    head signup
+    body
+        p Please select a username, and a password. Don't worry about any password rules here, we don't really care much about protecting your information - so <code>helloworld</code> is just fine by us!
+        form(action='/signup', method='post')
+            section
+                label(for='first') First Name
+                input(name='first' required)
+            section
+                label(for='last') Last Name
+                input(name='last' required)
+            hr
+            section
+                label(for='username') Username
+                input(name='username' required)
+            section
+                label(for='password') Password
+                input(name='password' type='password' required)
+            section
+                label(for='password2') Confirm Password
+                input(name='password2' type='password' required)
+                hr
+            button(type='submit') Sign up
+            a(href='/') Nevermind
+            section
+                p Already have an account? <a(href='/login') Sign in here!</a>
