--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,9 @@ html(lang="ENGLISH")
     head
         title #{title}
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/water.css@2/out/light.css")
-        a(href='/login') Sign In
+        if user
+            span Logged in: #{user.email}
+        else
+            a(href='/login') Sign In
         body
         block content
