--- a/views/login.pug
+++ b/views/login.pug
@@ -1,4 +1,17 @@
 extends layout.pug
 
 block content
-    head login
+    body
+        h1 Sign in
+        form(action="/login", method="post")
+            section
+                label(for="username") Username
+                input(name="username", required)
+            section
+                label(for="password") Password
+                input(name="password", type="password", required)
+            button(type="submit") Sign in
+            a(href="/") Nevermind
+            section
+                p Don't have an account yet?
+                    a(href="/signup")  Sign up here!
