Created post handlers for delete and edit

--- a/views/id.pug
+++ b/views/id.pug
@@ -30,3 +30,7 @@ block content
                 p May be contacted by mail
             else
                 p May NOT be contacted by phone or text
+        hr
+        a(href="/"+data['id']+"/edit") Edit Contact
+        br
+        a(href="/"+data['id']+"/delete") Delete Contact
