--- a/views/id_edit.pug
+++ b/views/id_edit.pug
@@ -1,4 +1,50 @@
 extends layout.pug
 
 block content
-    head id edit
+    body
+        h1 Update Contact
+        form(action='/'+data['id']+'/edit', method='post')
+            fieldset
+                legend Basic Info
+                section
+                    label(for='first') First Name:
+                    input(name='first', value=data['first_name'])
+                section
+                    label(for='last') Last Name:
+                    input(name='last', value=data['last_name'])
+                section
+                    label(for='phone') Phone:
+                    input(type='tel', name='phone', value=data['phone'])
+                section
+                    label(for='email') Email:
+                    input(type='email', name='email', value=data['email'])
+            fieldset
+                legend Address
+                section
+                    label(for='street') Street:
+                    input(name='street', value=data['street'])
+                section
+                    label(for='city') City:
+                    input(name='city', value=data['city'])
+                section
+                    label(for='state') State:
+                    input(name='state', value=data['state'])
+                section
+                    label(for='zip') Zip:
+                    input(name='zip', value=data['zip'])
+                section
+                    label(for='country') Country:
+                    input(name='country', value=data['country'])
+            fieldset
+                legend Contact Preferences
+                section
+                    input(type='checkbox', name='contact_by_phone', checked=data['contact_by_phone'])
+                    label(for='contact_by_phone') Contact by phone
+                section
+                    input(type='checkbox', name='contact_by_email', checked=data['contact_by_email'])
+                    label(for='contact_by_email') Contact by email
+                section
+                    input(type='checkbox', name='contact_by_mail', checked=data['contact_by_mail'])
+                    label(for='contact_by_mail') Contact by mail
+            button(type='submit') Save
+            a(href='/'+data['id']) Cancel
