--- a/views/id.pug
+++ b/views/id.pug
@@ -3,7 +3,7 @@ extends layout.pug
 block content
     body
         h1 Contact Info
-        h2= (data['first_name']+data['last_name'])
+        h2= (data['first_name']+' '+data['last_name'])
         hr
         a(href="/") Back to list
         p
