--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="ENGLISH")
     style
-        include main.css
+        include ../main.css
     head#head
         title #{title}
         div(class='navBar')
